<resources>
    <string name="app_name">My Application</string>
    <string name="enter_address">Enter Address</string>
    <string name="mail_com">************@mail.com</string>
    <string name="password">Password</string>
    <string name="pass_hidden">***********</string>
    <string name="remember_password">Remember password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_log_in_using">or log in using</string>
    <string name="chats">Chats</string>
    <string name="search_for_a_driver">Search for a driver</string>
</resources>