<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="125dp"
        android:layout_marginStart="25dp"
        android:text="Welcome back"
        android:textColor="@color/black"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:text="Fill in your email and password to continue"
        android:textSize="16sp">
    </TextView>
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/enter_address">
    </TextView>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:hint="@string/mail_com"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text3"
        tools:ignore="TouchTargetSizeCheck">

    </EditText>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/password">
    </TextView>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:hint="@string/pass_hidden"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text4"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/eye"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

    </ImageButton>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/remember_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:ignore="TouchTargetSizeCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:text="@string/forgot_password"
        android:textColor="@color/blue">
    </TextView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:onClick="Click"
        >
    </androidx.appcompat.widget.AppCompatButton>
    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintEnd_toEndOf="@id/button"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:textSize="16sp"
        android:text="@string/already_have_an_account"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text5"
        app:layout_constraintTop_toTopOf="@id/text5"
        android:textSize="16sp"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:layout_marginStart="5dp"
        />
    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text5"
        app:layout_constraintStart_toStartOf="@id/text5"
        app:layout_constraintEnd_toEndOf="@id/text5"
        android:layout_marginStart="50dp"
        android:text="@string/or_log_in_using"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/google"
        app:layout_constraintEnd_toEndOf="@id/text6"
        app:layout_constraintStart_toStartOf="@id/text6"
        app:layout_constraintTop_toBottomOf="@id/text6"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>